// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`m-multiplex.vue Demo-selected 单向绑定 1`] = `
<div class="root">
  <div class="root" vusion-slot-name="text">水杯</div>
  <div class="root" vusion-slot-name="text">咖啡</div>
  <div class="root" selected="selected" vusion-slot-name="text">坚果</div>
  <div class="root" selected="selected" vusion-slot-name="text">毛巾</div>
  <div class="root" vusion-slot-name="text">沙发</div>
</div>
`;

exports[`m-multiplex.vue Demo-selected 双向绑定 1`] = `
<div class="root">
  <div class="root" vusion-slot-name="text">
    水杯</div>
  <div class="root" vusion-slot-name="text">
    咖啡</div>
  <div class="root" selected="selected" vusion-slot-name="text">
    坚果</div>
  <div class="root" selected="selected" vusion-slot-name="text">
    毛巾</div>
  <div class="root" vusion-slot-name="text">
    沙发</div>
</div>
`;

exports[`m-multiplex.vue Demo-selected 双向绑定 2`] = `
<div class="root">
  <div class="root" vusion-slot-name="text">水杯</div>
  <div class="root" vusion-slot-name="text">咖啡</div>
  <div class="root" selected="selected" vusion-slot-name="text">坚果</div>
  <div class="root" selected="selected" vusion-slot-name="text">毛巾</div>
  <div class="root" vusion-slot-name="text">沙发</div>
</div>
`;

exports[`m-multiplex.vue Demo-保持顺序 1`] = `
<div class="root" direction="vertical" gap="small" type vusion-slot-name="default">
  <div class="root">
    <div class="root" vusion-slot-name="text">水杯</div>
    <div class="root" vusion-slot-name="text">咖啡</div>
    <div class="root" selected="selected" vusion-slot-name="text">坚果</div>
    <div class="root" selected="selected" vusion-slot-name="text">毛巾</div>
    <div class="root" vusion-slot-name="text">沙发</div>
  </div>
  <div class="root">
    <div class="root" vusion-slot-name="text">水杯</div>
    <div class="root" vusion-slot-name="text">咖啡</div>
    <div class="root" selected="selected" vusion-slot-name="text">坚果</div>
    <div class="root" selected="selected" vusion-slot-name="text">毛巾</div>
    <div class="root" vusion-slot-name="text">沙发</div>
  </div>
</div>
`;

exports[`m-multiplex.vue Demo-双向绑定 1`] = `
<div class="root" direction="vertical" gap="small" type vusion-slot-name="default">
  <div class="root">
    <div class="root" vusion-slot-name="text">水杯</div>
    <div class="root" vusion-slot-name="text">咖啡</div>
    <div class="root" selected="selected" vusion-slot-name="text">坚果</div>
    <div class="root" selected="selected" vusion-slot-name="text">毛巾</div>
    <div class="root" vusion-slot-name="text">沙发</div>
  </div>
  <div class="root">
    <div class="root" vusion-slot-name="text">水杯</div>
    <div class="root" vusion-slot-name="text">咖啡</div>
    <div class="root" selected="selected" vusion-slot-name="text">坚果</div>
    <div class="root" selected="selected" vusion-slot-name="text">毛巾</div>
    <div class="root" vusion-slot-name="text">沙发</div>
  </div>
</div>
`;

exports[`m-multiplex.vue Demo-双向绑定 2`] = `
<div class="root" direction="vertical" gap="small" type vusion-slot-name="default">
  <div class="root">
    <div class="root" vusion-slot-name="text">水杯</div>
    <div class="root" vusion-slot-name="text">咖啡</div>
    <div class="root" selected="selected" vusion-slot-name="text">坚果</div>
    <div class="root" selected="selected" vusion-slot-name="text">毛巾</div>
    <div class="root" vusion-slot-name="text">沙发</div>
  </div>
  <div class="root">
    <div class="root" vusion-slot-name="text">水杯</div>
    <div class="root" vusion-slot-name="text">咖啡</div>
    <div class="root" selected="selected" vusion-slot-name="text">坚果</div>
    <div class="root" selected="selected" vusion-slot-name="text">毛巾</div>
    <div class="root" vusion-slot-name="text">沙发</div>
  </div>
</div>
`;

exports[`m-multiplex.vue Demo-只读、禁用、禁用某一项 1`] = `
<div>
  <div class="root">
    <div class="root" vusion-slot-name="default">
      <div class="root" readonly="readonly">
        <div class="root" readonly="readonly" vusion-slot-name="text">水杯</div>
        <div class="root" readonly="readonly" vusion-slot-name="text">咖啡</div>
        <div class="root" readonly="readonly" selected="selected" vusion-slot-name="text">坚果</div>
        <div class="root" readonly="readonly" selected="selected" vusion-slot-name="text">毛巾</div>
        <div class="root" readonly="readonly" vusion-slot-name="text">沙发</div>
      </div>
    </div>
    <div class="root" vusion-slot-name="default">
      <div class="root" disabled="disabled">
        <div class="root" disabled="disabled" vusion-slot-name="text">水杯</div>
        <div class="root" disabled="disabled" vusion-slot-name="text">咖啡</div>
        <div class="root" disabled="disabled" selected="selected" vusion-slot-name="text">坚果</div>
        <div class="root" disabled="disabled" selected="selected" vusion-slot-name="text">毛巾</div>
        <div class="root" disabled="disabled" vusion-slot-name="text">沙发</div>
      </div>
    </div>
    <div class="root" vusion-slot-name="default">
      <div class="root">
        <div class="root" vusion-slot-name="text">水杯</div>
        <div class="root" vusion-slot-name="text">咖啡</div>
        <div class="root" disabled="disabled" selected="selected" vusion-slot-name="text">坚果</div>
        <div class="root" disabled="disabled" selected="selected" vusion-slot-name="text">毛巾</div>
        <div class="root" vusion-slot-name="text">沙发</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`m-multiplex.vue Demo-只读、禁用、禁用某一项 2`] = `
<div>
  <div class="root">
    <div class="root" vusion-slot-name="default">
      <div class="root" readonly="readonly">
        <div class="root" readonly="readonly" vusion-slot-name="text">水杯</div>
        <div class="root" readonly="readonly" vusion-slot-name="text">咖啡</div>
        <div class="root" readonly="readonly" selected="selected" vusion-slot-name="text">坚果</div>
        <div class="root" readonly="readonly" selected="selected" vusion-slot-name="text">毛巾</div>
        <div class="root" readonly="readonly" vusion-slot-name="text">沙发</div>
      </div>
    </div>
    <div class="root" vusion-slot-name="default">
      <div class="root" disabled="disabled">
        <div class="root" disabled="disabled" vusion-slot-name="text">水杯</div>
        <div class="root" disabled="disabled" vusion-slot-name="text">咖啡</div>
        <div class="root" disabled="disabled" selected="selected" vusion-slot-name="text">坚果</div>
        <div class="root" disabled="disabled" selected="selected" vusion-slot-name="text">毛巾</div>
        <div class="root" disabled="disabled" vusion-slot-name="text">沙发</div>
      </div>
    </div>
    <div class="root" vusion-slot-name="default">
      <div class="root">
        <div class="root" vusion-slot-name="text">水杯</div>
        <div class="root" vusion-slot-name="text">咖啡</div>
        <div class="root" disabled="disabled" selected="selected" vusion-slot-name="text">坚果</div>
        <div class="root" disabled="disabled" selected="selected" vusion-slot-name="text">毛巾</div>
        <div class="root" vusion-slot-name="text">沙发</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`m-multiplex.vue Demo-基本用法 1`] = `
<div>
  <div class="root">
    <div class="root" vusion-slot-name="text">水杯</div>
    <div class="root" vusion-slot-name="text">咖啡</div>
    <div class="root" vusion-slot-name="text">坚果</div>
    <div class="root" vusion-slot-name="text">毛巾</div>
    <div class="root" vusion-slot-name="text">沙发</div>
  </div>
</div>
`;

exports[`m-multiplex.vue Demo-基本用法 2`] = `
<div>
  <div class="root">
    <div class="root" vusion-slot-name="text">水杯</div>
    <div class="root" vusion-slot-name="text">咖啡</div>
    <div class="root" disabled="disabled" vusion-slot-name="text">坚果</div>
    <div class="root" vusion-slot-name="text">毛巾</div>
    <div class="root" vusion-slot-name="text">沙发</div>
  </div>
</div>
`;

exports[`m-multiplex.vue Demo-更新列表 1`] = `
<div>
  <div class="root">
    <div class="root" vusion-slot-name="text">水杯</div>
    <div class="root" vusion-slot-name="text">咖啡</div>
    <div class="root" selected="selected" vusion-slot-name="text">坚果</div>
    <div class="root" selected="selected" vusion-slot-name="text">毛巾</div>
    <div class="root" vusion-slot-name="text">沙发</div>
  </div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    更新列表
  </a>
</div>
`;
